# enterprise-ai-engineering-platform

./: .env.sample  .gitignore  README.md  main.py  mc-atlassian-server-setup  mcp_pr_review_test.py  notes  pyproject.toml
api/: chat_api.py  chat_models.py
app_mcp/clients/: jira_http_mcp_client.py  jira_mcp_manager.py  mcp_client_sample.py  mcp_manager.py
core/: db.py  llm.py
graph/: conditional_edges.py  graph_builder.py  state.py
nodes/: common.py
nodes/repository/: git_nodes.py
nodes/requirement/: jira_nodes.py
nodes/supervisor/: router_node.py
prompts/: system_prmpts.py
tools/: common_node_tools.py  githubs.py  jira_tools.py
