[project]
name = "enterprise-ai-engineering-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "grandalf>=0.8",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "langsmith>=0.8.18",
    "mcp>=1.28.0",
    "mcp-atlassian>=0.21.1",
    "nest-asyncio>=1.6.0",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
